--- a/height-biomass.Rmd
+++ b/height-biomass.Rmd
@@ -1,4 +1,8 @@
+# 问题：影响芒草产量的候选基因
 
+## 预处理
+
+### 株高是否可以代表生物量
 
 ```r
 JH.0=lm(JH.biomass~JH.height-1) #使用-1来删除截距项
@@ -12,5 +16,31 @@ plot(QG.height,QG.biomass,xlim=c(0,450))
 abline(QG.0)
 ```
 
+## 相关分析
 
+### 株高和某个基因表达量的图示
 
+```r
+x # 26个个体的株高
+y # 26个个体的某个基因表达量
+xhist <- hist(x, plot = FALSE)
+yhist <- hist(y, plot = FALSE)
+top <- max(c(xhist$counts, yhist$counts))
+xrange <- c(min(x),max(x))
+yrange <- c(min(y),max(y))
+nf <- layout(matrix(c(2,0,1,3),2,2,byrow = TRUE), c(3,1), c(1,3), TRUE)
+layout.show(nf)
+
+par(mar = c(3,3,1,1))
+plot(x, y, xlim = xrange, ylim = yrange, xlab = "", ylab = "")
+par(mar = c(0,3,1,1))
+barplot(xhist$counts, axes = FALSE, ylim = c(0, top), space = 0)
+par(mar = c(3,0,1,1))
+barplot(yhist$counts, axes = FALSE, xlim = c(0, top), space = 0, horiz = TRUE)
+```
+
+### 简单相关
+
+### 矩阵相关
+
+### 机器学习
