新增随机森林方法和一些补充思考
新数据做了一下随机森林回归，效果依然不是很理想……

--- a/height-biomass.Rmd
+++ b/height-biomass.Rmd
@@ -52,7 +52,8 @@ for (i in 1:260)
 
 p<0.01水平：Gene 62.  
 p<0.05水平：Gene 34, 65, 77, 88, 146, 171, 195, 251, 260.  
-（没有做JH和QG两地数据的分别筛选）  
+共10个基因，没有做JH和QG两地数据的分别筛选。  
+这里存在一个ties的问题，会导致非参数方法Spearman的效果变差。
 
 ### 矩阵相关
 
@@ -67,7 +68,6 @@ while (i<=260) #使用for语句则默认每次循环后i++，会绕过后面else
     else i=i+1 #若第a列被删去，原第a+1列会补上来，若直接i++会使原第a+1列不经检验就跳过
 }
 ```
-
 #### 建立矩阵
 
 ```r
@@ -130,6 +130,61 @@ print(corr[order])
 ```
 p<0.01水平：Gene 95.  
 p<0.05水平：Gene 40, 65, 177, 195, 206, 257.  
-其相关系数都在0.3-0.5左右.  
+共7个基因，其相关系数都在0.3-0.5左右.  
+矩阵相关要求中位数大于0，这样确实会损失一部分信息。为了考察其影响，用所有基因的数据按上述方法做了一遍矩阵相关，找到2个中位数为0但置换检验显著的基因，为Gene171和222，其置换检验p值分别为0.00859828和0.04539092，相关系数为0.4771875和0.3017154。  
 
 ### 机器学习
+
+####数据下标的划分  
+```r
+n=24 #观测值个数，即南荻个体数
+Z=5 #交叉验证的折数
+zz1=1:n #zz1为所有观测值的下标
+zz2=rep(1:Z,ceiling(n/Z))[1:n]
+zz2=sample(zz2,n) #zz2为1:5的随机排列
+```
+####随机森林回归和交叉验证
+```r
+for (i in 1:Z)
+{
+    m=zz1[zz2==i] #把数据随机地分成5份，取其中1份作为测试集，其余4份为训练集.
+    RF=randomForest(Height~.,data=w[-m,],mtry=100,ntree=10000) #用训练集建立模型，mtry是number of predictors sampled for spliting at each node，默认是自变量数/3.
+    y0=predict(RF,w[-m,]) #对训练集的预测.
+    y1=predict(RF,w[m,]) #对测试集的预测.
+    NMSE0[i]=mean((w[-m,2]-y0)^2)/mean((w[-m,2]-mean(w[-m,2]))^2)
+    NMSE[i]=mean((w[m,2]-y1)^2)/mean((w[m,2]-mean(w[m,2]))^2)
+} #对训练集和测试集分别得到5个标准化均方误差（NMSE），根据其公式定义看应该是均方误差除以方差得到.
+(mean(NMSE0)) #输出训练集5次平均的NMSE
+(mean(NMSE)) #测试集
+```
+反复试了几次，交叉验证的结果，还是跟上次差不多，不一一列出了。  
+5折交叉验证训练集的NMSE在0.18似乎还不错，测试集的NMSE一直大于1。尝试增加了函数中的mtry和ntree改进不大（后来上网查了一下，有人说默认的mtry一般不用改，往往都是加tree的数量，在精度和运算时间中权衡），倒是几次重新抽样建立5个集对结果的影响不小，NMSE从1.95到1.37都有。  
+因为自变量个数远大于观测值个数，感觉回归拟合时最终得到什么样的方程是较为不确定的，在很大程度上取决于用哪一部分数据建立模型；另外如果“抽样没抽好”，就会看到有某一个集做测试集时NMSE极大，从而得出很大的平均值。可能这就是为什么重新sample建立5个集对结果的影响会比较大，而且再增加tree的数量能改善的也有限。  
+有点茫然，不是很清楚怎么去调整改进。  
+
+####给出变量重要性
+```r
+RF=randomForest(Height~.,data=w,mtry=100,ntree=10000,importance=TRUE,importanceSD=T)
+imSD=sort(RF$importanceSD,decreasing=TRUE) #从置换检验的标准误差角度给出变量重要性
+imAccu=sort(RF$importance[,1],decreasing=TRUE) #从预测精度角度给出
+imMSE=sort(RF$importance[,2],decreasing=TRUE) #从均方误差角度给出
+
+(imSD[1:10])
+   Gene62   Gene195    Gene72    Gene94   Gene260    Gene88    Gene77    Gene14 
+16.082090 12.188445 10.931648 10.769899  9.823089  8.958934  8.673335  8.377055 
+   Gene43   Gene214 
+ 8.249838  8.190552 
+ 
+(imAccu[1:10])
+   Gene62   Gene195    Gene88   Gene260   Gene171    Gene77   Gene117    Gene14 
+301.46258 109.54764  60.59024  60.09107  52.19416  41.05383  34.45220  29.15351 
+   Gene44    Gene34 
+ 19.75451  14.06321 
+ 
+(imMSE[1:10])
+  Gene62  Gene195  Gene214   Gene72   Gene77  Gene260   Gene88   Gene94   Gene14 
+9862.699 5675.353 3745.121 3672.607 3551.497 3437.481 3040.673 2736.628 2673.034 
+ Gene171 
+2654.348 
+```
+共筛选出14个基因：Gene 14, 34, 43, 44, 62, 72, 77, 88, 94, 117, 171, 195, 214, 260.
