--- a/height-biomass.Rmd
+++ b/height-biomass.Rmd
@@ -132,6 +132,7 @@ p<0.01水平：Gene 95.
 p<0.05水平：Gene 40, 65, 177, 195, 206, 257.  
 共7个基因，其相关系数都在0.3-0.5左右.  
 矩阵相关要求中位数大于0，这样确实会损失一部分信息。为了考察其影响，用所有基因的数据按上述方法做了一遍矩阵相关，找到2个中位数为0但置换检验显著的基因，为Gene171和222，其置换检验p值分别为0.00859828和0.04539092，相关系数为0.4771875和0.3017154。  
+*Update*：用median()输出看了一下，Gene171的中位数确实为0没错，但Gene222中位数不为0，只是p值比较接近0.05，第一次置换检验中可能恰好没有被筛选出来。
 
 ### 机器学习
 
