--- a/importance300.Rmd
+++ b/importance300.Rmd
@@ -76,3 +76,9 @@ X1018, X2539, X2574, X3121, X3783, X5291, X5925, X8078, X10324, X10692, X11722, 
 3种方法，6个：X7124, X7450, X12070, X12310, X14279, X14372.  
 2种方法，7个：X13, X2574, X3783, X7983, X10692, X10884, X13941.  
 1种方法，33个：X72, X273, X1018, X2141, X2539, X3121, X5291, X8066, X8078, X8492, X9661, X9987, X10324, X10494, X10611, X10749, X11164, X11583, X11722, X12908, X12988, X13312, X13567, X13648, X13995, X14099, X14148, X14254, X14879, X14951, X14978, X14980, X15293.
+
+## 与之前结果的比较
+1.两次结果中都是，Goodman-Kruskal与其他方法几乎没有重合，Matrix Correlation重合度也不高，剩下5种方法的结果重合得还比较好。  
+2.这次是300个基因中筛出55个，之前是260个基因中筛出47个，比例上是差不多的。当然这是因为做Importance300时有意识参照了前面一次，所以可以看到除了Matrix Correlation，筛选的标准都提高了（e.g. 从p<0.05到p<0.01）。这应该是因为这300个基因已经经过一次筛选，是所有基因随机森林回归后重要性前300的基因的缘故。  
+3.事实上，究竟该把标准定成什么、筛出多少个candidate才是大概“合适”，都是做的时候的一种“直观感受”，而且p-value这些本身也只是个统计指标，p=0.049和0.051之间不一定前者就和性状相关而后者无关。Fan 2015中用的是Matrix Correlation p<0.01，这个标准放到300个基因中能筛选出来9个；最后采用的p<0.05标准筛出18个是想着，这一步筛选可以先稍微多一些，等到后面做了annotation和functional categorisation，还肯定会有一些像上次那样没有功能信息的。其他方法也是按照每种方法15个左右基因去找的。  
+4.Goodman-Kruskal这个方法感觉太奇怪，不太想用了。
