--- a/importance300.Rmd
+++ b/importance300.Rmd
@@ -19,7 +19,8 @@ X13, X3676, X3783, X4199, X5925, X7124, X7450, X9661, X11164, X12310, X12841, X1
 
 ### Siegel稳健回归
 p<1e-04筛选出11个基因：  
-X13, X3676, X4199, X5925, X13648, X13941, X14087, X14146, X14254, X14351, X14372.
+X13, X3676, X4199, X5925, X13648, X13941, X14087, X14146, X14254, X14351, X14372.  
+注：设置标准为p<1e-04可能确实筛出的基因偏少，但若设置为p<5e-04则会筛选出42个基因，又太多。  
 
 ## 矩阵相关
 ### 预处理
@@ -81,4 +82,4 @@ X1018, X2539, X2574, X3121, X3783, X5291, X5925, X8078, X10324, X10692, X11722, 
 1.两次结果中都是，Goodman-Kruskal与其他方法几乎没有重合，Matrix Correlation重合度也不高，剩下5种方法的结果重合得还比较好。  
 2.这次是300个基因中筛出55个，之前是260个基因中筛出47个，比例上是差不多的。当然这是因为做Importance300时有意识参照了前面一次，所以可以看到除了Matrix Correlation，筛选的标准都提高了（e.g. 从p<0.05到p<0.01）。这应该是因为这300个基因已经经过一次筛选，是所有基因随机森林回归后重要性前300的基因的缘故。  
 3.事实上，究竟该把标准定成什么、筛出多少个candidate才是大概“合适”，都是做的时候的一种“直观感受”，而且p-value这些本身也只是个统计指标，p=0.049和0.051之间不一定前者就和性状相关而后者无关。Fan 2015中用的是Matrix Correlation p<0.01，这个标准放到300个基因中能筛选出来9个；最后采用的p<0.05标准筛出18个是想着，这一步筛选可以先稍微多一些，等到后面做了annotation和functional categorisation，还肯定会有一些像上次那样没有功能信息的。其他方法也是按照每种方法15个左右基因去找的。  
-4.Goodman-Kruskal这个方法感觉太奇怪，不太想用了。
+4.Goodman-Kruskal这个方法感觉太奇怪，不太想用了。  
